update image element and sstyling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 
     <div id="main">
-        <div class="fill">
-            <img src="picture.jpg" alt="">
-            <a href="https://unsplash.com/@klngr?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Graham Klingler</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-        </div>
+
+            <div class="picture">
+                Photo by <a href="https://unsplash.com/es/@bonvivant?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bon Vivant</a> on <a href="https://unsplash.com/s/photos/ramen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  
+            </div>
+            
         <div>
             <div>
                 <p> This is not a real online service!
