--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                 <p> This is not a real online service!
                     You know you need something like this in your life
                     to help you realize your deepest dreams. <br>
-                    Sign up <span> now </span>  to get started.
+                    Sign up <i> now </i>  to get started.
                 </p>
-                <p>You know you want to.</p>
+                <p>You <i> know </i>  you want to.</p>
             </div>
-            <h1> Let's do this! </h1>
+
             <form action="post">
+                <h1> Let's do this! </h1>
+                <div id="form-container">
                 <div id="names">
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname" value="">
@@ -45,6 +47,7 @@
                     <input type="password" id="pass" name="password">
                     <label for="pass">Confirm Password:</label>
                     <input type="password" id="pass_confirm" name="password_confirm">
+                </div>
                 </div>
     
                 <button>Create Account</button>
