--- a/index.html
+++ b/index.html
@@ -31,22 +31,34 @@
                 <h1> Let's do this! </h1>
                 <div id="form-container">
                 <div id="names">
+                    <div>
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname" value="">
+                    </div>
+                    <div>
                     <label for="lname">Last name:</label>
                     <input type="text" id="lname" name="lname" value="">
+                    </div>
                 </div>
                 <div id="contact">
+                    <div>
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email">
+                    </div>
+                    <div>
                     <label for="phone">Phone Number</label>
                     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                    </div>
                 </div>
                 <div id="passwords">
+                    <div>
                     <label for="pass">Password:</label>
                     <input type="password" id="pass" name="password">
+                    </div>
+                    <div>
                     <label for="pass">Confirm Password:</label>
                     <input type="password" id="pass_confirm" name="password_confirm">
+                    </div>
                 </div>
                 </div>
     
