--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
             <div class="picture">
                 Photo by <a href="https://unsplash.com/es/@bonvivant?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bon Vivant</a> on <a href="https://unsplash.com/s/photos/ramen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  
+                <a href="https://www.flaticon.com/free-icons/ramen" title="ramen icons">Ramen icons created by justicon - Flaticon</a>
+                <div class="logo">
+                    <img src="noodles.png" id='ramen' alt="">
+                    Ramen
+                </div>
             </div>
             
     
