--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <div id="form-container">
                 <div id="names">
                     <div>
-                    <label for="fname">First name:</label>
+                    <label for="fname">First Name:</label>
                     <input type="text" id="fname" name="fname" value="">
                     </div>
                     <div>
-                    <label for="lname">Last name:</label>
+                    <label for="lname">Last Name:</label>
                     <input type="text" id="lname" name="lname" value="">
                     </div>
                 </div>
